[package]
name = "orca"
version = "0.1.0"
authors = ["Nirvan Tyagi <nirvan.tyagi@gmail.com>"]
edition = "2018"

[dependencies]
algebra = { git = "https://github.com/scipr-lab/zexe/", rev = "a498ed1"}
digest = "0.8.1"
rand = "0.7.3"
sha3 = "0.8.2"

[[bench]]
name = "microbenchmarks"
path = "benches/microbenchmarks.rs"
harness = false
