[package]
name = "orca"
version = "0.1.0"
authors = ["Nirvan Tyagi <nirvan.tyagi@gmail.com>"]
edition = "2018"

[dependencies]
algebra = { git = "https://github.com/scipr-lab/zexe/", rev = "a498ed1"}
digest = "0.8.1"
rand = "0.7.3"
sha3 = "0.8.2"

[dev-dependencies]
redis = { version = "0.17.0", features = [ "r2d2" ] }
rayon = "1.4.0"
r2d2 = "0.8.9"
num_cpus = "1.13.0"

[[bench]]
name = "microbenchmarks"
path = "benches/microbenchmarks.rs"
harness = false

[[bench]]
name = "platform"
path = "benches/platform.rs"
harness = false
